[project]
name = "tycmd-wrapper"
description = "A python wrapper for tycmd"
authors = [
  {name = "Florian Rau", email = "bimac@users.noreply.github.com"},
]
requires-python = ">=3.10"
readme = "README.md"
repository = "https://github.com/int-brain-lab/tycmd-wrapper/"
documentation = "https://int-brain-lab.github.io/tycmd-wrapper/"
license = {text = "MIT"}
keywords = ["tycmd", "teensy", "firmware"]
dynamic = ["version"]

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"

[tool.pdm.version]
source = "file"
path = "tycmd.py"

[tool.pdm.build]
includes = ["tycmd.py", "py.typed"]
excludes = [".gitignore"]
run-setuptools = false
is-purelib = false

[tool.pdm.dev-dependencies]
dev = [
    "ruff>=0.5.0",
    "pdm-backend>=2.3.1",
    "mypy>=1.10.1",
    "pytest>=8.2.2",
    "sphinx>=7.3.7",
    "sphinx-autobuild>=2024.4.16",
    "sphinx-rtd-theme>=2.0.0",
    "pytest-cov>=5.0.0",
    "myst-parser>=3.0.1",
]

[tool.ruff]
include = ["pyproject.toml", "tycmd.py", "tests/*.py"]

[tool.ruff.lint]
extend-select = ["D"]

[tool.ruff.lint.per-file-ignores]
"tests/*.py" = ["D"]

[tool.ruff.lint.pydocstyle]
convention = "numpy"

[tool.mypy]
files = ["tycmd.py"]

[tool.pytest.ini_options]
addopts    = "--cov=tycmd --cov-report=html --cov-report=xml"
minversion = "6.0"
testpaths  = [ "tests" ]
